--- a/airs/content/pages/rules/emails/115/index.adoc
+++ b/airs/content/pages/rules/emails/115/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/115/
 :category: emails
 :description: This requirement establishes the importance of avoiding malicious emails using anti-spam filters for incoming and outgoing emails.
-:keywords: Security, Requirement, Emails, Filter, Spam, Malware, Rules, Ethical Hacking, Pentesting
+:keywords: Security, Requirement, Emails, Filter, Spam, Malware, CAPEC, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R115. Filter malicious emails
@@ -14,3 +14,9 @@ must be checked with an *anti-spam* filter.
 == Findings
 
 * [inner]#link:/web/findings/114/[F114. Phishing]#
+
+== References
+
+. [[r1]] link:http://capec.mitre.org/data/definitions/41.html[CAPEC-41: Using Meta-characters in E-mail Headers to Inject Malicious Payloads].
+This type of attack involves an attacker leveraging meta-characters in email
+headers to inject improper behavior into email programs.
